// Copyright 2020 The Measurement System Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.duchy;

option java_package = "org.wfanet.measurement.internal.duchy";
option java_multiple_files = true;

import "src/main/proto/wfa/measurement/internal/sketch_aggregation_stage.proto";

// ******************************************************************************
// **** See add_a_protocol.md for instructions on adding a new MPC protocol. ****
// ******************************************************************************

// Stage of one of the supported computation protocols.
message ComputationStage {
  oneof stage {
    // Stage of a Liquid Legions sketch aggregation multi party computation.
    // TODO: Rename SketchAggregationStage to LiquidLegionsSketchAggregationStage
    SketchAggregationStage liquid_legions_sketch_aggregation = 1;
  }
}

// *** This message should not ever be instantiated ***
//
// A wrapper message around enums to prevent namespace collisions for enum
// names in the same package.
message ComputationTypeEnum {
  // The type of a computation protocol.
  enum ComputationType {
    // Not set intentionally.
    UNSPECIFIED = 0;

    // Aggregation of Liquid Legion sketches.
    LIQUID_LEGIONS_SKETCH_AGGREGATION_V1 = 1;
  }
}